my new project details added,updated the education details

--- a/index.html
+++ b/index.html
@@ -3,7 +3,6 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
   <title>Resume-Afnad C A</title>
   <meta content="" name="description">
   <meta content="" name="keywords">
@@ -145,6 +144,13 @@
               </div>
             </div>
 
+            <div class="progress">
+              <span class="skill">MongoDB <i class="val">90%</i></span>
+              <div class="progress-bar-wrap">
+                <div class="progress-bar" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100"></div>
+              </div>
+            </div>
+
           </div>
 
           <div class="col-lg-6">
@@ -170,6 +176,13 @@
               </div>
             </div>
 
+            <div class="progress">
+              <span class="skill">Express js <i class="val">90%</i></span>
+              <div class="progress-bar-wrap">
+                <div class="progress-bar" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100"></div>
+              </div>
+            </div>
+
           </div>
 
         </div>
@@ -186,7 +199,7 @@
 
         <div class="section-title">
           <h2>Resume</h2>
-          <p>Hi,My journey in web development is just beginning, marked by curiosity and a determination to make a mark in this dynamic field. Through hands-on projects, I've familiarized myself with essential tools and technologies, from HTML and CSS to JavaScript and responsive design frameworks. My commitment to continuous learning drives me to stay updated with the latest industry trends and best practices.If you see an opportunity where my enthusiasm and skills can contribute meaningfully,</p>
+          <p>My journey in web development is just beginning, fueled by a burning curiosity and a determination to make a lasting impact in this dynamic field. Through hands-on projects, I've built a strong foundation in essential tools and technologies like HTML, CSS, JavaScript, and responsive design frameworks. My commitment to continuous learning keeps me on top of the latest industry trends and best practices. I'm confident that my skills and unwavering enthusiasm can make a meaningful contribution to your projects.  Furthermore, I've delved into backend development with Node.js, Express.js, and MongoDB, and even deployed an e-commerce site on AWS. This experience showcases my ability to translate knowledge into real-world applications.</p>
         </div>
         <div class="text-center"><button id="my_resume" style="margin: 0 auto;" type="button" class="btn btn-outline-primary">My Resume</button></div>
         <div class="row">
@@ -198,8 +211,15 @@
               <p><em>College of Engineering Thalassery,Eranholi,Thalasseri,Kannur-670107</em></p>
               <p>During my academic journey, I pursued a Bachelor of Technology degree in Electronics and Commucication from College of Engineering Thalassery. My coursework provided me with a solid foundation in key areas in the technological field and preparing me for the challenges of the professional world.</p>
             </div>
+            <div class="resume-item">
+              <h4>MERN STACK Developer</h4>
+              <h5>2023 - 2024</h5>
+              <p><em>BrotoType, Room No.III/9, 3rd Floor, SDF Building, Kinfra Techno Industrialpark Calicut University PO, Kakkanchery, Kerala 673635</em></p>
+              <p>Embarking on the MERN stack journey as a Software Development Intern at Brototype. Excited to develop full-stack applications!</p>
+            </div>
           </div>
           </div>
+          
         </div>
 
       </div>
@@ -220,6 +240,7 @@
               <li data-filter="*" class="filter-active">All</li>
               <li data-filter=".filter-app">AI BILLER</li>
               <li data-filter=".filter-card">Clone websites</li>
+              <li data-filter=".filter-proj">e-commerce Project</li>
               <li data-filter=".filter-web">Work in progress</li>
             </ul>
           </div>
@@ -335,6 +356,22 @@
                   <a href="assets/img/portfolio/vs_code_clone.png" data-gallery="portfolioGallery" class="portfolio-lightbox" title="vscode_clone"><i class="bx bx-plus"></i></a>
                   <a href="portfolio-details.html"  title="project Details"><i class="bx bx-link"></i></a>
                 </div>
+              </div>
+            </div>
+          </div>
+
+          <div class="col-lg-4 col-md-6 portfolio-item filter-proj">
+            <div class="portfolio-wrap">
+              <img src="assets/img/userPage.png" class="img-fluid" alt="">
+              <div class="portfolio-info">
+                <h4>MyCart.shop(online Book Store)</h4>
+                <p>e-commerce</p>
+                <div class="portfolio-links">
+                  <a href="assets/img/adminPage.png" data-gallery="portfolioGallery" class="portfolio-lightbox" title=""><i class="bx bx-plus"></i></a>
+                  <a href="assets/img/userPage.png" data-gallery="portfolioGallery" class="portfolio-lightbox" title=""></a>
+                  <a href="ald2211/MyCart"  title="project Details"><i class="bx bx-link"></i></a>
+                </div>
+                
               </div>
             </div>
           </div>
